--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#ffffff"
+    app:layout_constrainedWidth="true"
+    app:layout_constrainedHeight="true"
+    app:layout_constraintBottom_toBottomOf="parent"
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textColor="#000000"
-        android:textSize="25sp"
+        android:id="@+id/lay_tv_Home_welcome"
+        android:layout_width="350dp"
+        android:layout_height="80dp"
         android:gravity="center"
-        />
+        android:padding="5dp"
+        android:text="@string/welcome_text"
+        android:textSize="25sp"
+        tools:layout_editor_absoluteX="30dp"
+        tools:layout_editor_absoluteY="16dp"
+        tools:ignore="MissingConstraints" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/lay_btn_add_book"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="140dp"
+        android:text="@string/str_add_book"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lay_btn_all_book"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/lay_btn_all_book"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="152dp"
+        android:text="@string/str_see_all_book"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lay_tv_Home_welcome"
+        tools:ignore="MissingConstraints" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
