--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,26 +17,31 @@
         android:padding="5dp"
         android:text="@string/welcome_text"
         android:textSize="25sp"
+        android:background="#FF4a24"
+        android:textColor="#000000"
         tools:layout_editor_absoluteX="30dp"
         tools:layout_editor_absoluteY="16dp"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/lay_btn_add_book"
-        android:layout_width="300dp"
+        android:layout_width="230dp"
         android:layout_height="70dp"
-        android:layout_marginTop="140dp"
+        android:layout_marginTop="40dp"
+        android:background="#1886F7"
         android:text="@string/str_add_book"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lay_btn_all_book"
         tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/lay_btn_all_book"
-        android:layout_width="300dp"
+        android:layout_width="230dp"
         android:layout_height="70dp"
         android:layout_marginTop="152dp"
+        android:background="#1886F7"
         android:text="@string/str_see_all_book"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
